---------------------------------------------------------------------------
Version 4.1.5  [DEVEL] (rgerhards), 2009-02-??
- added new config directive $RepeatedMsgContainsOriginalMsg so that the
  "last message repeated n times" messages, if generated, may
  have an alternate format that contains the message that is being repeated
---------------------------------------------------------------------------
Version 4.1.4  [DEVEL] (rgerhards), 2009-01-29
- bugfix: inconsistent use of mutex/atomic operations could cause segfault
  details are too many, for full analysis see blog post at:
  http://blog.gerhards.net/2009/01/rsyslog-data-race-analysis.html
- bugfix: unitialized mutex was used in msg.c:getPRI
  This was subtle, because getPRI is called as part of the debugging code
  (always executed) in syslogd.c:logmsg.
- bufgix: $PreserveFQDN was not properly handled for locally emitted
  messages
---------------------------------------------------------------------------
Version 4.1.3  [DEVEL] (rgerhards), 2008-12-17
- added $InputTCPServerAddtlFrameDelimiter config directive, which
  enables to specify an additional, non-standard message delimiter
  for processing plain tcp syslog. This is primarily a fix for the invalid
  framing used in Juniper's NetScreen products. Credit to forum user
  Arv for suggesting this solution.
- added $InputTCPServerInputName property, which enables a name to be
  specified that will be available during message processing in the
  inputname property. This is considered useful for logic that treats
  messages differently depending on which input received them.
- added $PreserveFQDN config file directive
  Enables to use FQDNs in sender names where the legacy default
  would have stripped the domain part.
  Thanks to BlinkMind, Inc. http://www.blinkmind.com for sponsoring this
  development.
- bugfix: imudp went into an endless loop under some circumstances
  (but could also leave it under some other circumstances...)