@@ -141,7 +141,13 @@ once they are implemented, it can make very much sense
 <tr>
 <td>regex</td>
 <td>Compares the property against the provided POSIX
-regular
+BRE regular
+expression.</td>
+</tr>
+<tr>
+<td>ereregex</td>
+<td>Compares the property against the provided POSIX
+ERE regular
 expression.</td>
 </tr>
 </tbody>
