@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 4.1.5  [DEVEL] (rgerhards), 2009-02-??
+- added ERE support in filter conditions
+  new comparison operation "ereregex"
 - added new config directive $RepeatedMsgContainsOriginalMsg so that the
   "last message repeated n times" messages, if generated, may
   have an alternate format that contains the message that is being repeated
